# bika

./: .dockerignore  CMakeLists.txt  Makefile  docker-compose.yml  readme.md  services.Dockerfile  vcpkg.json
bika/: CMakeLists.txt
bika/include/bika/: Config.h  Config2.h  Crypto.h  Database.h  Http.h  HttpClient.h  HttpServer.h  Postgres.h  Random.h  RestApi.h  Routes.h  Validator.h
bika/src/: Config.cpp  Crypto.cpp  Database.cpp  Http.cpp  HttpClient.cpp  HttpServer.cpp  Postgres.cpp  Random.cpp  RestApi.cpp  Routes.cpp
config/: backend.yml  config.yml  services.yml
db/: local.db  postgres.sql
frontend/: Dockerfile  index.html
src/auth-service/: CMakeLists.txt  auth-service.cpp
src/backend/: backend.cpp
src/broker-service/: CMakeLists.txt  broker-service.cpp  handler.h
src/common/: CMakeLists.txt  Config.h  Routes.cpp
src/logger-service/: CMakeLists.txt  logger-service.cpp
src/sample/: sample.cpp
tests/: CMakeLists.txt  test_Config.cpp  test_Config2.cpp  test_Crypto.cpp  test_Http.cpp  test_HttpClient.cpp  test_HttpServer.cpp  test_Postgres.cpp  test_Random.cpp  test_RestApi.cpp  test_Validator.cpp  test_bika.cpp
